--- a/index.html
+++ b/index.html
@@ -342,18 +342,35 @@
 
 
 
-
-
-
 <!-- RESULTS SECTION -->
 <section class="Leader">
   <div class="hero-body has-text-centered">
     <h1 class="title is-1 csbench">Experimental Results</h1>
   </div>
 </section>
-        
+
 <section class="section">
-  <div class="container" style="margin-top: -60px; margin-bottom: -50px;">
+  <div class="container" style="margin-top: -40px; margin-bottom: -70px;"></div>
+  <div class="container" style="margin-bottom: 2vh;">
+    <!-- Inference for a Single Question -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <!-- <h2 class="title is-3">Inference for a Single Question</h2> -->
+        <div class="content has-text-justified">
+          <p>
+            We evaluated Search-o1 on <strong>challenging reasoning tasks</strong>, including GPQA, mathematics and coding, and <strong>open-domain QA tasks</strong>, including single-hop and multi-hop QA tasks. The results showcase Search-o1's exceptional performance, confirming that the search mechanism effectively fulfills the model's knowledge requirements during reasoning.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ Batch Inference Mechanism -->
+  </div>
+</section>
+
+
+
+<section class="section">
+  <div class="container" style="margin-top: -120px; margin-bottom: -50px;">
     <div class="columns is-centered">
       <div class="column is-full content">
         <!-- 案例研究 1 -->
