--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- <img src="static/images/csbench_logo_2.png" style="width:1em;vertical-align: middle" alt="Logo"/> -->
             <!-- <span class="csbench" style="vertical-align: middle">CS-Bench</span> -->
             </h1>
-          <h2 class="title is-3" style="margin-top: 0px; margin-bottom: 40px;">
+          <h2 class="title is-3" style="margin-top: 0px; margin-bottom: 50px;">
             <!-- <img src="static/images/title.png" style="width:1em;vertical-align: middle" alt="Logo"/> -->
             🔍 Search-o1: Agentic Search-Enhanced<br> Large Reasoning Models
           </h2>
@@ -71,9 +71,9 @@
               <span class="author-block">Guanting Dong<sup style="color:#ed4b82;">1</sup><sup></sup>,</span>
               <span class="author-block">Jiajie Jin<sup style="color:#ed4b82;">1</sup><sup></sup>,</span>
               <span class="author-block">Yuyao Zhang<sup style="color:#ed4b82;">1</sup><sup></sup>,</span>
-              <span class="author-block">Yujia Zhou<sup style="color:#1a4ebf;">2</sup><sup></sup>,</span>
+              <span class="author-block">Yujia Zhou<sup style="color:#1a4ebf;">2</sup><sup></sup>,</span><br>
               <span class="author-block">Yutao Zhu<sup style="color:#ed4b82;">1</sup></sup></sup>,</span>
-              <span class="author-block">Peitian Zhang<sup style="color:#ed4b82;">1</sup><sup></sup>,</span><br>
+              <span class="author-block">Peitian Zhang<sup style="color:#ed4b82;">1</sup><sup></sup>,</span>
               <span class="author-block">Zhicheng Dou<sup style="color:#ed4b82;">1</sup></sup><sup>*
              
           </div>
