--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
               <span class="author-block">Guanting Dong<sup style="color:#ed4b82;">1</sup><sup></sup>,</span>
               <span class="author-block">Jiajie Jin<sup style="color:#ed4b82;">1</sup><sup></sup>,</span>
               <span class="author-block">Yuyao Zhang<sup style="color:#ed4b82;">1</sup><sup></sup>,</span>
-              <span class="author-block">Yujia Zhou<sup style="color:#1a4ebf;">2</sup><sup></sup>,</span><br>
-              <span class="author-block">Yutao Zhu<sup style="color:#ed4b82;">1</sup></sup></sup>,</span>
+              <span class="author-block">Yujia Zhou<sup style="color:#1a4ebf;">2</sup><sup></sup>,</span>
+              <span class="author-block">Yutao Zhu<sup style="color:#ed4b82;">1</sup></sup></sup>,</span><br>
               <span class="author-block">Peitian Zhang<sup style="color:#ed4b82;">1</sup><sup></sup>,</span>
               <span class="author-block">Zhicheng Dou<sup style="color:#ed4b82;">1</sup></sup><sup>*
              
