--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <!-- PDF Link. -->
             
               <span class="link-block">
-                <a href="https://arxiv.org/abs/xxxx.xxxxxx"
+                <a href="https://arxiv.org/abs/2501.05366"
                    class="external-link button is-normal is-rounded is-light">
                 
                   <span class="icon">
@@ -126,7 +126,7 @@
               <!-- </span> -->
               <!-- hf paper Link. -->
               <span class="link-block">
-                <a href="https://huggingface.co/papers/xxxx.xxxxxx"
+                <a href="https://huggingface.co/papers/2501.05366"
                    class="external-link button is-normal is-rounded is-light">
                   <span class="icon">
                       <!-- <i class="far fa-images"></i> -->
