--- a/index.html
+++ b/index.html
@@ -464,21 +464,21 @@
   <div class="container is-max-desktop content">
     <h2 class="title is-3 has-text-centered">Citation</h2>
     <pre><code>@article{search-o1,
-  title={Search-o1: Agentic Search-Enhanced Large Reasoning Models},
-  author={Xiaoxi Li and
-          Guanting Dong and
-          Jiajie Jin and
-          Yuyao Zhang and
-          Yujia Zhou and
-          Peitian Zhang and
-          Yutao Zhu and
-          Zhicheng Dou},
-  journal={CoRR},
-  volume={abs/xxxx.xxxxxx},
-  year={2025},
-  url={https://arxiv.org/abs/xxxx.xxxxxx},
-  eprinttype={arXiv},
-  eprint={xxxx.xxxxxx}
+    title={Search-o1: Agentic Search-Enhanced Large Reasoning Models},
+    author={Xiaoxi Li and
+            Guanting Dong and
+            Jiajie Jin and
+            Yuyao Zhang and
+            Yujia Zhou and
+            Yutao Zhu and
+            Peitian Zhang and
+            Zhicheng Dou},
+    journal={CoRR},
+    volume={abs/2501.05366},
+    year={2025},
+    url={https://arxiv.org/abs/2501.05366},
+    eprinttype={arXiv},
+    eprint={2501.05366}
 }
 </code></pre>
   </div>
