--- a/index.html
+++ b/index.html
@@ -476,22 +476,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title is-3 has-text-centered">Citation</h2>
-    <pre><code>@article{search-o1,
-    title={Search-o1: Agentic Search-Enhanced Large Reasoning Models},
-    author={Xiaoxi Li and
-            Guanting Dong and
-            Jiajie Jin and
-            Yuyao Zhang and
-            Yujia Zhou and
-            Yutao Zhu and
-            Peitian Zhang and
-            Zhicheng Dou},
-    journal={CoRR},
-    volume={abs/2501.05366},
-    year={2025},
-    url={https://arxiv.org/abs/2501.05366},
-    eprinttype={arXiv},
-    eprint={2501.05366}
+    <pre><code>@article{li2025search,
+  title={Search-o1: Agentic search-enhanced large reasoning models},
+  author={Li, Xiaoxi and Dong, Guanting and Jin, Jiajie and Zhang, Yuyao and Zhou, Yujia and Zhu, Yutao and Zhang, Peitian and Dou, Zhicheng},
+  journal={arXiv preprint arXiv:2501.05366},
+  year={2025}
 }
 </code></pre>
   </div>
