--- a/index.html
+++ b/index.html
@@ -476,11 +476,26 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title is-3 has-text-centered">Citation</h2>
-    <pre><code>@article{li2025search,
-  title={Search-o1: Agentic search-enhanced large reasoning models},
-  author={Li, Xiaoxi and Dong, Guanting and Jin, Jiajie and Zhang, Yuyao and Zhou, Yujia and Zhu, Yutao and Zhang, Peitian and Dou, Zhicheng},
-  journal={arXiv preprint arXiv:2501.05366},
-  year={2025}
+    <pre><code>@article{DBLP:journals/corr/abs-2501-05366,
+  author       = {Xiaoxi Li and
+                  Guanting Dong and
+                  Jiajie Jin and
+                  Yuyao Zhang and
+                  Yujia Zhou and
+                  Yutao Zhu and
+                  Peitian Zhang and
+                  Zhicheng Dou},
+  title        = {Search-o1: Agentic Search-Enhanced Large Reasoning Models},
+  journal      = {CoRR},
+  volume       = {abs/2501.05366},
+  year         = {2025},
+  url          = {https://doi.org/10.48550/arXiv.2501.05366},
+  doi          = {10.48550/ARXIV.2501.05366},
+  eprinttype    = {arXiv},
+  eprint       = {2501.05366},
+  timestamp    = {Wed, 19 Feb 2025 21:19:08 +0100},
+  biburl       = {https://dblp.org/rec/journals/corr/abs-2501-05366.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 </code></pre>
   </div>
