--- a/index.html
+++ b/index.html
@@ -59,9 +59,13 @@
             <!-- <img src="static/images/csbench_logo_2.png" style="width:1em;vertical-align: middle" alt="Logo"/> -->
             <!-- <span class="csbench" style="vertical-align: middle">CS-Bench</span> -->
             </h1>
-          <h2 class="title is-3" style="margin-top: 0px; margin-bottom: 50px;">
+          <h2 class="title is-3" style="margin-top: 0px; margin-bottom: 20px;">
             <!-- <img src="static/images/title.png" style="width:1em;vertical-align: middle" alt="Logo"/> -->
             🔍 Search-o1: Agentic Search-Enhanced<br> Large Reasoning Models
+          </h2>
+
+          <h2 class="title is-4" style="margin-bottom: 40px; color: #bd061c;">
+            🔥 EMNLP 2025 (Oral)
           </h2>
             
           <h2 class="subtitle is-3 publication-subtitle">
