--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
             </div>
 
-            <h2 class="title is-4" style="margin-top: 20px; margin-bottom: 20px; color: #bd061c;">
+            <h2 class="title is-3" style="margin-top: 20px; margin-bottom: 20px; color: #bd061c; font-size: 1.5rem;">
               🔥 EMNLP 2025 (Oral)
             </h2>
 
